# demo-rest

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  errors.py  main.py
app/controllers/: auth.py  checkout.py  order.py  product.py  user.py
app/data/: kafka.py  mongo.py  mysql.py  seed.py  store.py
app/models/: checkout.py  order.py  product.py  user.py
app/models/db/: product.py  user.py
app/routes/: auth.py  checkout.py  order.py  product.py  user.py
